Commit Final Favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academia</title>
     <meta name="description" content="Desenvolvedor Front End e UX/UI Designer">
-    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="./favicon.png" type="image/svg+xml">
     <link rel="preload" href="./css/style.min.css" as="style">
     <link rel="stylesheet" href="./css/style.min.css">
 
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="treino-2">
-                    <div class="item-central animacao-cores">
+                    <div class="animacao-cores item-central">
                         <p class="font-3-m cor-0">Recomendado por usuários</p>
                     </div>
                     <img src="media/img/treino_2.jpg" alt="">
