--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
                 <h1 class="font-1-l-b cor-0">Entre em Contato</h1>
                 <p class="font-3-xm cor-0">Matricule-se agora mesmo! Fale com um de nossos atendentes</p>
                 <form class="newsletter-form">
-                    <input class="font-3-m nome" type="text" placeholder="Nome">
-                    <input class="font-3-m telefone" type="number" placeholder="Telefone">
+                    <input class="font-3-m nome cor-0" type="text" placeholder="Nome">
+                    <input class="font-3-m telefone cor-0" type="number" placeholder="Telefone">
                 </form>
                 <ul>
                     <li class="item-contato font-3-m cor-0">
