--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </li>
         </ul>
     </header>
-
+ <h2>H2 da feature1</h2>
     <main>
         <section class="introducao-bg box-border" id="sobre">
             <div class="introducao container container-border">
