--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academia</title>
-    <meta name="description" content="Desenvolvedor Front End e UX/UI Designer">
+    <meta name="description" content="Academia Robust Habit">
     <link rel="icon" href="./favicon.png" type="image/svg+xml">
     <link rel="preload" href="./css/style.min.css" as="style">
     <link rel="stylesheet" href="./css/style.min.css">
@@ -18,7 +18,7 @@
 
 <body>
     <header class="topo">
-        <nav class="nav-bar container cor-0 font-1-b" data-menu="suave">
+        <nav class="nav-bar container cor-0 font-1-b" aria-label="primária" data-menu="suave">
             <div class="logo">
                 <img src="media/img/logo.png" alt="Logo Robust Habit">
             </div>
@@ -68,8 +68,9 @@
             </li>
         </ul>
     </header>
+
     <main>
-        <section class="introducao-bg box-border" id="sobre">
+        <section class="introducao-bg box-border" aria-label="Introdução" id="sobre">
             <div class="introducao container container-border">
                 <div class="informacao">
                     <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
@@ -88,7 +89,7 @@
                 </div>
             </div>
         </section>
-        <div class="letreiro-bg">
+        <div class="letreiro-bg" aria-label="Letreiro">
             <div class="letreiro">
                 <p class="texto-letreiro font-1-bn cor-0">Consultoria Indidvidual</p>
                 <img src="media/img/halter.png" alt="">
@@ -102,9 +103,9 @@
             </div>
         </div>
         <article>
-            <div class="diferenciais-bg" id="servicos">
+            <div class="diferenciais-bg" aria-labelledby="diferenciais" id="servicos">
                 <div class="titulo-diferenciais">
-                    <h1 class="font-2-l cor-0">Nossos <span class="font-1-l">Diferenciais</span></h1>
+                    <h1 id="diferenciais" class="font-2-l cor-0">Nossos <span class="font-1-l">Diferenciais</span></h1>
                 </div>
                 <div class="diferenciais container">
                     <div class="equipe">
@@ -152,9 +153,9 @@
                 </div>
             </div>
         </article>
-        <section class="planos-bg" id="precos">
+        <section class="planos-bg" aria-label="planos" id="precos">
             <div class="titulo-planos">
-                <h1 class="font-1-l-b cor-0">nossos planos</h1>
+                <h1 id="planos" class="font-1-l-b cor-0">nossos planos</h1>
             </div>
             <div class="planos container">
                 <div class="treino-1">
@@ -206,7 +207,7 @@
                 </div>
             </div>
         </section>
-        <section class="vantagens-bg">
+        <section class="vantagens-bg" aria-label="vantagens">
             <div class="vantagens container container-border">
                 <div class="imagem"><img src="media/img/homem_e_mulher_treinando.png" alt=""></div>
                 <div>
@@ -236,7 +237,7 @@
                 </div>
             </div>
         </section>
-    <section class="contato-bg" id="contato">
+    <section class="contato-bg" id="contato" aria-label="Contato">
         <div class="contato container">
             <div class="container-conteudo">
                 <h1 class="font-1-l-b cor-0">Entre em Contato</h1>
@@ -256,13 +257,12 @@
     </section>
     <div class="bg"></div>
 </main>
-<footer class="footer-bg">
+<footer class="footer-bg" aria-label="Rodapé">
     <div class="footer">
         <a href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank"><p class="font-3-m cor-0">Desenvolvido por<wbr><span class="cor-p1">Juberlandio</span></p></a>
     </div>
 </footer>
     <script src="js/main.js"></script>
-    <script type="module" src="js/script.js"></script>
 </body>
 
 </html>
