--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <a href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank"><p class="font-3-m cor-0">Desenvolvido por<wbr><span class="cor-p1">Juberlandio</span></p></a>
     </div>
 </footer>
-    <script src="js/main.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
